--- a/.github/workflows/github-docker-cicd.yaml
+++ b/.github/workflows/github-docker-cicd.yaml
@@ -66,7 +66,8 @@ jobs:
         run: echo "::set-output name=date::$(date +'%Y-%m-%d--%M-%S')"
 
       - name: Build the Docker image # push The image to the docker hub
-        run: docker build . --file dockerfile --tag $DOCKER_USER/$REPO_NAME:${{ steps.date.outputs.date }}
+        run: docker build . --file dockerfile --tag $DOCKER_USER/$REPO_NAME:2025-03-26_53-27
+
 
       - name: Docker Push
         run: docker push $DOCKER_USER/$REPO_NAME:${{ steps.date.outputs.date }}
